[package]
name = "rdp-rust"
version = "0.5.0"
edition = "2018"
authors = ["erik.langenborg@gmail.com"]
license = "MIT"
readme = "README.md"
url = "https://github.com/user01/rdp-rust"

[lib]
name = "rdp_rust"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.2.0"
numpy = "0.7.0"
ndarray = "0.12.1"

[dependencies.pyo3]
version = "0.8.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
requires-python = ">=3.6"