[package]
name = "rdp-rust"
version = "0.5.2"
edition = "2018"
authors = ["erik.langenborg@gmail.com"]
license = "MIT"
readme = "README.md"

[lib]
name = "rdp_rust"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.5.1"
numpy = "0.13"
ndarray = { version = "0.15.3", features = ["approx"]}

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.6"
requires-dist = ["numpy>=1.16.0"]